--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /*======= Create a new universal selector that changes the font color to: #3C373B */
 * {
-  font-color: #3C373B;
+  color: #3C373B;
 }
 
 h1 {
@@ -70,13 +70,13 @@ img {
 .container header nav a:hover {
 /*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
 background: white;
-background-color: pink;
+color: pink;
 }
 
 /*======= Create a selector for the about section to have the following styles:
   margin-top: 20px;
 */
-.about-section {
+section.about {
   margin-top: 20px;
 }
 
@@ -93,7 +93,7 @@ background-color: pink;
 /*======= Create a selector for the address tag in the contact-section class to have the following styles:
    line-height: 2;
 */
-.contact-section address {
+address {
   line-height: 2;
 }
 
@@ -123,7 +123,7 @@ footer nav {
   color: black;
   text-decoration: underline;
 */
-.footer-content a {
+footer a {
   margin: 10px;
   color: black;
   text-decoration: underline;
@@ -137,7 +137,7 @@ footer nav a:first-child {
 /*======= Create a hover state for the anchor tag in the footer nav to have the following styles:
   color: white;
 */
-footer nav a:hover {
+footer a:hover {
   color: white;
 }
 
